Fixed minor issues

--- a/src/components/Hero/Hero.module.scss
+++ b/src/components/Hero/Hero.module.scss
@@ -25,9 +25,9 @@
 
 .slogan {
     font-size: 1.5rem;
-    color: var(--primary);
+    color: var(--primary-hover);
 }
 
 .logo {
-    width: 5rem;
+    width: 10rem;
 }
